--- a/index.html
+++ b/index.html
@@ -14,6 +14,39 @@
     
 </head>
 <body>
+    <header>
+       <div class="header-container">
+          <div class="left-header">
+             <img src="logo.png" alt="logo">
+             <h1>Campo minato</h1>
+          </div>
 
+          <div class="right-header">
+             <button id="button">Play</button>
+          </div>
+       </div>
+    </header>
+       
+    <main>
+      <div class="main-container">
+         <div class="cell"></div>
+         <div class="cell"></div>
+         <div class="cell"></div>
+         <div class="cell"></div>
+         <div class="cell"></div>
+         <div class="cell"></div>
+         <div class="cell"></div>
+         <div class="cell"></div>
+         <div class="cell"></div>
+         <div class="cell"></div>
+         <div class="cell"></div>
+         <div class="cell"></div></var>
+
+       </div>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
