--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     </header>
        
     <main>
-      <div class="main-container">
+      <div id="grid">
+         <!-- <div class="cell"></div>
          <div class="cell"></div>
          <div class="cell"></div>
          <div class="cell"></div>
@@ -39,8 +40,7 @@
          <div class="cell"></div>
          <div class="cell"></div>
          <div class="cell"></div>
-         <div class="cell"></div>
-         <div class="cell"></div></var>
+         <div class="cell"></div> -->
 
        </div>
     </main>
