--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campo minato</title>
+    
+    <!--Link Font-awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!--Link CSS-->
     <link rel="stylesheet" href="style.css">
@@ -34,7 +37,13 @@
     </main>
 
     <footer>
-
+        <div class="footer-right">
+           <span>Made with</span>
+           <i class="fa-solid fa-heart"></i>
+           <span>by
+            <a href="#" id="boolean-link">Boolean</a>
+           </span>
+        </div>
     </footer>
 </body>
 </html>
