creazione tag select in HTML

--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
           </div>
 
           <div class="right-header">
-             <button id="button">Play</button>
+            <label for="level">Difficoltà:</label>
+            <select name="level" id="difficulty-level">
+               <option value="basso">basso</option>
+               <option value="medio">medio</option>
+               <option value="alto">alto</option>
+            </select>
+            <button id="button">Play</button>
           </div>
        </div>
     </header>
